--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,16 +3,17 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
 
-    <color name="primary">#6200EE</color>
-    <color name="primary_dark">#3700B3</color>
-    <color name="primary_light">#BB86FC</color>
-    <color name="accent">#03DAC5</color>
+    <!-- TournaMaker Palette -->
+    <color name="primary">#00C853</color> <!-- Green from mockups -->
+    <color name="primary_dark">#009624</color>
+    <color name="primary_light">#5EFB82</color>
+    <color name="accent">#00C853</color>
 
     <color name="success">#4CAF50</color>
     <color name="error">#F44336</color>
     <color name="warning">#FF9800</color>
 
-    <color name="background">#FFFFFF</color>
+    <color name="background">#F5F5F5</color> <!-- Light gray for background -->
     <color name="background_dark">#121212</color>
-    <color name="surface">#FFFFFF</color>
+    <color name="surface">#FFFFFF</color> <!-- White for cards/surfaces -->
 </resources>
